[gd_scene load_steps=8 format=3 uid="uid://oa8fw4qtcfsf"]

[ext_resource type="Script" path="res://Assets/Content/Actors/PlayerController/Weapon/Weapon.gd" id="1_jxqvk"]
[ext_resource type="Resource" uid="uid://cp3ja8rwcof3e" path="res://Assets/Ressources/Weapons/W_Stick.tres" id="2_jghgv"]
[ext_resource type="Texture2D" uid="uid://o7l86ri6mgoi" path="res://Assets/Sprites/Weapons/MoonLight.png" id="3_hpmsy"]
[ext_resource type="PackedScene" uid="uid://bf6un2fxybn1f" path="res://Assets/Content/FX/sparkFx.tscn" id="4_ahc5k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4v1r6"]
radius = 0.509572
height = 1.19935

[sub_resource type="Animation" id="Animation_vsldl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kepvm"]
_data = {
"RESET": SubResource("Animation_vsldl")
}

[node name="Weapon" type="Node3D" node_paths=PackedStringArray("_sprite", "_hitBox")]
script = ExtResource("1_jxqvk")
_weaponActualStats = ExtResource("2_jghgv")
_sprite = NodePath("origin/WeaponSprite")
_hitBox = NodePath("Area3D/CollisionShape3D")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(-0.0836779, 0.996493, -3.65768e-09, -4.37114e-08, 1.91069e-15, 1, 0.996493, 0.0836779, 4.35581e-08, 0.439182, 0.0118666, -0.00575683)
shape = SubResource("CapsuleShape3D_4v1r6")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kepvm")
}
speed_scale = 2.0

[node name="origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="WeaponSprite" type="Sprite3D" parent="origin"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.355, -0.032, 0)
alpha_cut = 2
texture_filter = 0
render_priority = 2
texture = ExtResource("3_hpmsy")

[node name="Spark" parent="." instance=ExtResource("4_ahc5k")]

[connection signal="ChangeWeapon" from="." to="." method="_on_change_weapon"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]

[editable path="Spark"]
